--- a/styleBuscarVuelos.css
+++ b/styleBuscarVuelos.css
@@ -13,7 +13,6 @@
 }
 
 
-.content-input input[type=radio]:checked + i:before{
-	background-color: aqua;
-    color: aqua;
+#advertencia{
+    border-radius: 20px;
 }
