--- a/styleBuscarVuelos.css
+++ b/styleBuscarVuelos.css
@@ -3,3 +3,16 @@
     font-size: medium;
     color: red;
 }
+
+#seccionBotones{
+    width: 100%;
+}
+
+#seccionBotones2{
+    width: 100%;
+}
+
+
+#advertencia{
+    border-radius: 20px;
+}
